package/lib/src/bindings.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
import 'dart:ffi' as ffi;

/// Auto-generated FFI bindings for zenoh_dart C shim.
class ZenohDartBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  ZenohDartBindings(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  ZenohDartBindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  /// Initializes the Dart native API for dynamic linking.
  ///
  /// Must be called before any other zenoh_dart functions that use
  /// Dart native ports. Pass `NativeApi.initializeApiDLData` from Dart.
  ///
  /// Returns 0 on success.
  int zd_init_dart_api_dl(ffi.Pointer<ffi.Void> data) {
    return _zd_init_dart_api_dl(data);
  }

  late final _zd_init_dart_api_dlPtr =
      _lookup<ffi.NativeFunction<ffi.IntPtr Function(ffi.Pointer<ffi.Void>)>>(
        'zd_init_dart_api_dl',
      );
  late final _zd_init_dart_api_dl = _zd_init_dart_api_dlPtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>)>();

  /// Initializes the zenoh logger from the RUST_LOG environment variable,
  /// falling back to the provided filter string if RUST_LOG is not set.
  ///
  /// @param fallback_filter  Filter string (e.g., "error", "info", "debug").
  void zd_init_log(ffi.Pointer<ffi.Char> fallback_filter) {
    return _zd_init_log(fallback_filter);
  }

  late final _zd_init_logPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
        'zd_init_log',
      );
  late final _zd_init_log = _zd_init_logPtr
      .asFunction<void Function(ffi.Pointer<ffi.Char>)>();

  /// Returns the size of z_owned_config_t in bytes.
  ///
  /// Used by Dart to allocate the correct amount of native memory
  /// for opaque zenoh types.
  int zd_config_sizeof() {
    return _zd_config_sizeof();
  }

  late final _zd_config_sizeofPtr =
      _lookup<ffi.NativeFunction<ffi.Size Function()>>('zd_config_sizeof');
  late final _zd_config_sizeof = _zd_config_sizeofPtr
      .asFunction<int Function()>();

  /// Creates a default configuration.
  ///
  /// @param config  Pointer to an uninitialized z_owned_config_t.
  /// @return 0 on success, negative on failure.
  int zd_config_default(ffi.Pointer<ffi.Opaque> config) {
    return _zd_config_default(config);
  }

  late final _zd_config_defaultPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Opaque>)>>(
        'zd_config_default',
      );
  late final _zd_config_default = _zd_config_defaultPtr
      .asFunction<int Function(ffi.Pointer<ffi.Opaque>)>();

  /// Inserts a JSON5 value into the configuration at the given key path.
  ///
  /// Takes a mutable owned config pointer. Internally obtains a mutable loan
  /// via z_config_loan_mut() before calling zc_config_insert_json5().
  ///
  /// @param config  Pointer to a valid z_owned_config_t.
  /// @param key     Configuration key path (e.g., "mode").
  /// @param value   JSON5 value string (e.g., "\"peer\"").
  /// @return 0 on success, negative on failure.
  int zd_config_insert_json5(
    ffi.Pointer<ffi.Opaque> config,
    ffi.Pointer<ffi.Char> key,
    ffi.Pointer<ffi.Char> value,
  ) {
    return _zd_config_insert_json5(config, key, value);
  }

  late final _zd_config_insert_json5Ptr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Opaque>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('zd_config_insert_json5');
  late final _zd_config_insert_json5 = _zd_config_insert_json5Ptr
      .asFunction<
        int Function(
          ffi.Pointer<ffi.Opaque>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  /// Obtains a const loaned reference to the configuration.
  ///
  /// @param config  Pointer to a valid z_owned_config_t.
  /// @return Const pointer to the loaned config.
  ffi.Pointer<ffi.Opaque> zd_config_loan(ffi.Pointer<ffi.Opaque> config) {
    return _zd_config_loan(config);
  }

  late final _zd_config_loanPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Opaque> Function(ffi.Pointer<ffi.Opaque>)
        >
      >('zd_config_loan');
  late final _zd_config_loan = _zd_config_loanPtr
      .asFunction<ffi.Pointer<ffi.Opaque> Function(ffi.Pointer<ffi.Opaque>)>();

  /// Drops (frees) the configuration.
  ///
  /// After this call the owned config is in gravestone state.
  /// A second drop is a safe no-op.
  ///
  /// @param config  Pointer to a z_owned_config_t to drop.
  void zd_config_drop(ffi.Pointer<ffi.Opaque> config) {
    return _zd_config_drop(config);
  }

  late final _zd_config_dropPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Opaque>)>>(
        'zd_config_drop',
      );
  late final _zd_config_drop = _zd_config_dropPtr
      .asFunction<void Function(ffi.Pointer<ffi.Opaque>)>();

  /// Returns the size of z_owned_session_t in bytes.
  ///
  /// Used by Dart to allocate the correct amount of native memory
  /// for opaque zenoh types.
  int zd_session_sizeof() {
    return _zd_session_sizeof();
  }

  late final _zd_session_sizeofPtr =
      _lookup<ffi.NativeFunction<ffi.Size Function()>>('zd_session_sizeof');
  late final _zd_session_sizeof = _zd_session_sizeofPtr
      .asFunction<int Function()>();

  /// Opens a Zenoh session with the given configuration.
  ///
  /// @param session  Pointer to an uninitialized z_owned_session_t.
  /// @param config   Pointer to a z_owned_config_t (consumed by z_open).
  /// @return 0 on success, negative on failure.
  int zd_open_session(
    ffi.Pointer<ffi.Opaque> session,
    ffi.Pointer<ffi.Opaque> config,
  ) {
    return _zd_open_session(session, config);
  }

  late final _zd_open_sessionPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Opaque>, ffi.Pointer<ffi.Opaque>)
        >
      >('zd_open_session');
  late final _zd_open_session = _zd_open_sessionPtr
      .asFunction<
        int Function(ffi.Pointer<ffi.Opaque>, ffi.Pointer<ffi.Opaque>)
      >();

  /// Obtains a const loaned reference to the session.
  ///
  /// @param session  Pointer to a valid z_owned_session_t.
  /// @return Const pointer to the loaned session.
  ffi.Pointer<ffi.Opaque> zd_session_loan(ffi.Pointer<ffi.Opaque> session) {
    return _zd_session_loan(session);
  }

  late final _zd_session_loanPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Opaque> Function(ffi.Pointer<ffi.Opaque>)
        >
      >('zd_session_loan');
  late final _zd_session_loan = _zd_session_loanPtr
      .asFunction<ffi.Pointer<ffi.Opaque> Function(ffi.Pointer<ffi.Opaque>)>();

  /// Gracefully closes and drops the session.
  ///
  /// Calls z_close for graceful shutdown, then z_session_drop to release
  /// resources. After this call the owned session is in gravestone state.
  ///
  /// @param session  Pointer to a z_owned_session_t to close and drop.
  void zd_close_session(ffi.Pointer<ffi.Opaque> session) {
    return _zd_close_session(session);
  }

  late final _zd_close_sessionPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Opaque>)>>(
        'zd_close_session',
      );
  late final _zd_close_session = _zd_close_sessionPtr
      .asFunction<void Function(ffi.Pointer<ffi.Opaque>)>();

  /// Returns the size of z_view_keyexpr_t in bytes.
  ///
  /// Used by Dart to allocate the correct amount of native memory
  /// for opaque zenoh types.
  int zd_view_keyexpr_sizeof() {
    return _zd_view_keyexpr_sizeof();
  }

  late final _zd_view_keyexpr_sizeofPtr =
      _lookup<ffi.NativeFunction<ffi.Size Function()>>(
        'zd_view_keyexpr_sizeof',
      );
  late final _zd_view_keyexpr_sizeof = _zd_view_keyexpr_sizeofPtr
      .asFunction<int Function()>();

  /// Creates a view key expression from a null-terminated string.
  ///
  /// The string must remain valid for the lifetime of the view.
  ///
  /// @param ke    Pointer to an uninitialized z_view_keyexpr_t.
  /// @param expr  Null-terminated key expression string.
  /// @return 0 on success, Z_EINVAL (-1) if the expression is invalid.
  int zd_view_keyexpr_from_str(
    ffi.Pointer<ffi.Opaque> ke,
    ffi.Pointer<ffi.Char> expr,
  ) {
    return _zd_view_keyexpr_from_str(ke, expr);
  }

  late final _zd_view_keyexpr_from_strPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Opaque>, ffi.Pointer<ffi.Char>)
        >
      >('zd_view_keyexpr_from_str');
  late final _zd_view_keyexpr_from_str = _zd_view_keyexpr_from_strPtr
      .asFunction<
        int Function(ffi.Pointer<ffi.Opaque>, ffi.Pointer<ffi.Char>)
      >();

  /// Obtains a const loaned reference to the key expression.
  ///
  /// @param ke  Pointer to a valid z_view_keyexpr_t.
  /// @return Const pointer to the loaned key expression.
  ffi.Pointer<ffi.Opaque> zd_view_keyexpr_loan(ffi.Pointer<ffi.Opaque> ke) {
    return _zd_view_keyexpr_loan(ke);
  }

  late final _zd_view_keyexpr_loanPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Opaque> Function(ffi.Pointer<ffi.Opaque>)
        >
      >('zd_view_keyexpr_loan');
  late final _zd_view_keyexpr_loan = _zd_view_keyexpr_loanPtr
      .asFunction<ffi.Pointer<ffi.Opaque> Function(ffi.Pointer<ffi.Opaque>)>();

  /// Converts a loaned key expression to a view string.
  ///
  /// The output view string borrows from the key expression and must not
  /// outlive it. Returns void -- always succeeds on a valid loaned keyexpr.
  ///
  /// @param ke   Const pointer to a loaned key expression.
  /// @param out  Pointer to an uninitialized z_view_string_t to receive the result.
  void zd_keyexpr_as_view_string(
    ffi.Pointer<ffi.Opaque> ke,
    ffi.Pointer<ffi.Opaque> out,
  ) {
    return _zd_keyexpr_as_view_string(ke, out);
  }

  late final _zd_keyexpr_as_view_stringPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Opaque>, ffi.Pointer<ffi.Opaque>)
        >
      >('zd_keyexpr_as_view_string');
  late final _zd_keyexpr_as_view_string = _zd_keyexpr_as_view_stringPtr
      .asFunction<
        void Function(ffi.Pointer<ffi.Opaque>, ffi.Pointer<ffi.Opaque>)
      >();

  /// Returns the size of z_owned_bytes_t in bytes.
  ///
  /// Used by Dart to allocate the correct amount of native memory
  /// for opaque zenoh types.
  int zd_bytes_sizeof() {
    return _zd_bytes_sizeof();
  }

  late final _zd_bytes_sizeofPtr =
      _lookup<ffi.NativeFunction<ffi.Size Function()>>('zd_bytes_sizeof');
  late final _zd_bytes_sizeof = _zd_bytes_sizeofPtr
      .asFunction<int Function()>();

  /// Copies a null-terminated string into owned bytes.
  ///
  /// @param bytes  Pointer to an uninitialized z_owned_bytes_t.
  /// @param str    Null-terminated string to copy.
  /// @return 0 on success, negative on failure.
  int zd_bytes_copy_from_str(
    ffi.Pointer<ffi.Opaque> bytes,
    ffi.Pointer<ffi.Char> str,
  ) {
    return _zd_bytes_copy_from_str(bytes, str);
  }

  late final _zd_bytes_copy_from_strPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Opaque>, ffi.Pointer<ffi.Char>)
        >
      >('zd_bytes_copy_from_str');
  late final _zd_bytes_copy_from_str = _zd_bytes_copy_from_strPtr
      .asFunction<
        int Function(ffi.Pointer<ffi.Opaque>, ffi.Pointer<ffi.Char>)
      >();
